# dicompressor

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DICOM_NOTES.md  PERFORMANCE_NOTES.md  README.md  SECURITY.md  compress_exames_htj2k.py  install_macos_apple_silicon.sh  requirements.txt
app/: cli.cpp  cli.hpp  main.cpp
bench/: main.cpp
cmake/: PreventInSourceBuild.cmake  Sanitizers.cmake  Warnings.cmake
codec/: htj2k_encoder.cpp  htj2k_encoder.hpp  openjpeg_decoder.cpp  openjpeg_decoder.hpp  openjph_source_decoder.cpp  openjph_source_decoder.hpp  source_decoder.cpp  source_decoder.hpp
core/: file_discovery.cpp  file_discovery.hpp  job_scheduler.cpp  job_scheduler.hpp  patient_zipper.cpp  patient_zipper.hpp  report.cpp  report.hpp  transcoder.cpp  transcoder.hpp  types.hpp
dicom/: dicom_metadata.cpp  dicom_metadata.hpp  dicom_reader.cpp  dicom_reader.hpp  dicom_writer.cpp  dicom_writer.hpp  photometric.cpp  photometric.hpp  pixel_sequence_builder.cpp  pixel_sequence_builder.hpp  streaming_pixel_sequence_builder.cpp  streaming_pixel_sequence_builder.hpp  transfer_syntax.cpp  transfer_syntax.hpp
platform/: fsync.cpp  fsync.hpp
scripts/: bootstrap_deps_linux_x86_64.sh  bootstrap_deps_macos_arm64.sh
tests/: test_cli.cpp  test_discovery.cpp  test_encoder.cpp  test_macros.hpp  test_main.cpp  test_registry.cpp  test_registry.hpp  test_report.cpp  test_streaming_pixel_sequence_builder.cpp  test_transcoder.cpp  test_zip.cpp
util/: fs.cpp  fs.hpp  logging.cpp  logging.hpp  memory_pool.cpp  memory_pool.hpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.hpp
